css fix for logo and long headers on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1832,10 +1832,6 @@
 	}
 
 	header.major {
-		width: -moz-max-content;
-		width: -webkit-max-content;
-		width: -ms-max-content;
-		width: max-content;
 		margin-bottom: 2em;
 	}
 
